--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
-    
+
     <scm>
         <url>https://github.com/sterlp/pmw</url>
     </scm>
@@ -55,15 +55,15 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-        <plantuml.version>1.2025.0</plantuml.version>
-        <spring.version>3.3.9</spring.version>
-        <lombok.version>1.18.36</lombok.version>
+        <plantuml.version>1.2025.2</plantuml.version>
+        <spring.version>3.3.12</spring.version>
+        <lombok.version>1.18.38</lombok.version>
         <h2.version>2.3.232</h2.version>
         <jackson.version>2.18.2</jackson.version>
 
         <pmd.version>7.2.0</pmd.version>
-        
-        <spring.persistent.tasks.version>1.6.6</spring.persistent.tasks.version>
+
+        <spring.persistent.tasks.version>2.0.0</spring.persistent.tasks.version>
     </properties>
 
     <modules>
@@ -86,11 +86,16 @@
                 <type>test-jar</type>
                 <scope>test</scope>
             </dependency>
-
             <dependency>
                 <groupId>org.sterl.pmw</groupId>
                 <artifactId>pmw-spring</artifactId>
                 <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.sterl.spring</groupId>
+                <artifactId>spring-persistent-tasks-core</artifactId>
+                <version>${spring.persistent.tasks.version}</version>
             </dependency>
 
             <dependency>
@@ -124,12 +129,6 @@
                 <groupId>com.fasterxml.jackson.datatype</groupId>
                 <artifactId>jackson-datatype-jsr310</artifactId>
                 <version>${jackson.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.quartz-scheduler</groupId>
-                <artifactId>quartz</artifactId>
-                <version>2.3.2</version>
-                <scope>compile</scope>
             </dependency>
             <dependency>
                 <groupId>com.h2database</groupId>
@@ -171,7 +170,8 @@
                         <failOnViolation>true</failOnViolation>
                         <printFailingErrors>true</printFailingErrors>
                         <analysisCache>true</analysisCache>
-                        <analysisCacheLocation>${project.build.directory}/pmd/pmd.cache</analysisCacheLocation>
+                        <analysisCacheLocation>
+                            ${project.build.directory}/pmd/pmd.cache</analysisCacheLocation>
                     </configuration>
                     <executions>
                         <execution>
@@ -234,7 +234,7 @@
             </plugins>
         </pluginManagement>
     </build>
-    
+
     <profiles>
         <profile>
             <id>release</id>
@@ -258,5 +258,5 @@
             </build>
         </profile>
     </profiles>
-    
+
 </project>
