--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -6,12 +6,12 @@
     <parent>
         <groupId>org.sterl.pmw</groupId>
         <artifactId>pmw-root</artifactId>
-        <version>2.0.1-SNAPSHOT</version>
+        <version>2.1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>spring-pmw-ui</artifactId>
-    <name>Poor Man Workflow Admin UI</name>
+    <name>Spring Poor Mans Workflow Admin UI</name>
     <description>Dashboard UI which shows the deployed workflows and links to the Spring Task UI</description>
 
     <inceptionYear>2022</inceptionYear>
