--- a/example/pom.xml
+++ b/example/pom.xml
@@ -18,7 +18,7 @@
     <properties>
         <java.version>21</java.version>
         <spt.version></spt.version>
-        <pmw.version>2.2.2-SNAPSHOT</pmw.version>
+        <pmw.version>2.3.0</pmw.version>
         <spt.version>2.2.0</spt.version>
     </properties>
 
