--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.sterl.pmw</groupId>
         <artifactId>pmw-root</artifactId>
-        <version>2.3.1</version>
+        <version>2.3.2-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
