--- a/example/pom.xml
+++ b/example/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.3.12</version>
+        <version>3.4.10</version>
         <relativePath /> <!-- lookup parent from repository -->
     </parent>
     <groupId>org.sterl.pmw</groupId>
@@ -17,9 +17,8 @@
 
     <properties>
         <java.version>21</java.version>
-        <spt.version></spt.version>
-        <pmw.version>2.3.0</pmw.version>
-        <spt.version>2.2.0</spt.version>
+        <pmw.version>2.3.2-SNAPSHOT</pmw.version>
+        <spt.version>2.2.4</spt.version>
     </properties>
 
     <dependencies>
